@@ -36,6 +36,9 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Patch #1535500: fix segfault in BZ2File.writelines and make sure it
+  raises the correct exceptions.
+
 - Bug #1471938: Fix curses module build problem on Solaris 8; patch by
   Paul Eggert.
 
